Add Yaml Case Base Dir Config for java sdk test

--- a/src/sdk/java/fesql-auto-test-java/pom.xml
+++ b/src/sdk/java/fesql-auto-test-java/pom.xml
@@ -239,6 +239,11 @@
                             <name>reportLog</name>
                             <value>${reportLog}</value>
                         </property>
+                        <property>
+                            <name>yamlCaseBaseDir</name>
+                            <value>${yamlCaseBaseDir}</value>
+                        </property>
+
                     </systemProperties>
                 </configuration>
             </plugin>
