--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -19,6 +19,7 @@ jobs:
         run: source /root/.bashrc && bash tools/install_fesql.sh
       - name: build fedb
         run: |
+          ln -s /opt/rh/sclo-git25/root/usr/bin/git /usr/local/bin/git
           ln -sf /depends/thirdparty thirdparty
           ln -sf /depends/thirdsrc thirdsrc
           source /root/.bashrc && bash steps/simple_compile.sh
