--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -14,6 +14,7 @@ jobs:
       - uses: actions/checkout@v1
       - name: update submodule
         run: |
+           ln -s /opt/rh/sclo-git25/root/usr/bin/git /usr/local/bin/git
            git submodule update --init
       - name: build fesql
         run: source /root/.bashrc && bash tools/install_fesql.sh
