--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -15,9 +15,10 @@ jobs:
       - name: update submodule
         run: |
            /opt/rh/sclo-git212/root/usr/bin/git submodule update --init
+      - name: uncompress_thirdparty
+        run: cd /depends && tar -zxf thirdparty.tar.gz 
       - name: build fesql
         run: |
-
           source /root/.bashrc && bash tools/install_fesql.sh
       - name: build fedb
         run: |
