--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,10 +71,10 @@ if (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
 endif ()
 add_definitions(-DHAVE_STDBOOL_H=1)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
-option(TESTING_ENABLE "Enable test" ON)
+option(TESTING_ENABLE "Enable test" OFF)
 option(TCMALLOC_ENABLE "Enable TCMALLOC" ON)
-option(SQL_PYSDK_ENABLE "Enable sql pysdk" ON)
-option(SQL_JAVASDK_ENABLE "Enable sql javasdk" ON)
+option(SQL_PYSDK_ENABLE "Enable sql pysdk" OFF)
+option(SQL_JAVASDK_ENABLE "Enable sql javasdk" OFF)
 option(MAC_TABLET_ENABLE "Enable Table on Mac OS" OFF)
 message (STATUS "MAC_TABLET_ENABLE: ${MAC_TABLET_ENABLE}")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
