--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -5,6 +5,11 @@ env:
 jobs:
   cpplint:
     runs-on: self-hosted
+    container:
+      image: ghcr.io/4paradigm/centos6_gcc7_hybridsql:0.0.1
+      credentials:
+        username: ${{ github.actor }}
+        password: ${{ secrets.CR_PAT_ZW }}
     steps:
       - uses: actions/checkout@v1
       - uses: reviewdog/action-cpplint@master
