--- a/.github/workflows/style.yaml
+++ b/.github/workflows/style.yaml
@@ -13,19 +13,19 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  shellcheck:
-    runs-on: self-hosted
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: shellcheck
-        uses: reviewdog/action-shellcheck@v1
-        with:
-          github_token: ${{ secrets.github_token }}
-          reporter: github-pr-review
-          path: "."
-          pattern: "*.sh"
-          exclude: "./.git/*"
+  #  shellcheck:
+  #    runs-on: self-hosted
+  #    steps:
+  #      - uses: actions/checkout@v2
+  #
+  #      - name: shellcheck
+  #        uses: reviewdog/action-shellcheck@v1
+  #        with:
+  #          github_token: ${{ secrets.github_token }}
+  #          reporter: github-pr-review
+  #          path: "."
+  #          pattern: "*.sh"
+  #          exclude: "./.git/*"
   cpplint:
     runs-on: self-hosted
     steps:
@@ -36,7 +36,7 @@ jobs:
           github_token: ${{ secrets.github_token }}
           level: info
           reporter: github-pr-review
-          flags: --linelength=80
+          flags: --linelength=120
 
   detect-secrets:
     runs-on: self-hosted
