--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,8 +26,8 @@ if (CMAKE_BUILD_TYPE STREQUAL "")
 endif ()
 message (STATUS "CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
 set(FEDB_VERSION_MAJOR 2)
-set(FEDB_VERSION_MEDIUM 1)
-set(FEDB_VERSION_MINOR 0)
+set(FEDB_VERSION_MINOR 1)
+set(FEDB_VERSION_BUG 0)
 set(FEDB_COMMIT_ID 0)
 set(HYBRIDSE_COMMIT_ID 0)
 
@@ -83,7 +83,7 @@ if (MAC_TABLET_ENABLE)
 endif ()
 if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
     set(OS_LIB ${CMAKE_THREAD_LIBS_INIT} rt)
-    set(BRPC_LIBS brpc protobuf glog gflags unwind lzma ssl crypto leveldb z snappy dl pthread ${OS_LIB})
+    set(BRPC_LIBS brpc protobuf glog gflags unwind ssl crypto leveldb z snappy dl pthread ${OS_LIB})
 elseif (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
     set(OS_LIB 
             ${CMAKE_THREAD_LIBS_INIT}
