--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -47,7 +47,9 @@ jobs:
         run: |
            /opt/rh/sclo-git212/root/usr/bin/git submodule update --init
       - name: uncompress_thirdparty
-        run: cd /depends && tar -zxf thirdparty.tar.gz
+        run: |
+          cd /depends && tar -zxf thirdparty.tar.gz
+          mkdir zookeeper-3.4.14 && mv thirdsrc/* zookeeper-3.4.14/ && mv zookeeper-3.4.14 thirdsrc/
       - name: build_fesql
         run: bash tools/install_hybridse.sh
       - name: build_fedb
