fix: resolve the access token error

--- a/.github/workflows/conventional-pr.yaml
+++ b/.github/workflows/conventional-pr.yaml
@@ -9,4 +9,4 @@ jobs:
       - name: Check PR semantics
         uses: Namchee/conventional-pr@v0.3.0
         with:
-          access_token: ${{ secrets.ACCESS_TOKEN }}
+          access_token: ${{ secrets.github_token }}
