--- a/java/hybridse-native/pom.xml
+++ b/java/hybridse-native/pom.xml
@@ -12,7 +12,31 @@
 	<artifactId>hybridse-native</artifactId>
 	<packaging>jar</packaging>
 	<name>hybridse-native</name>
-	<version>0.1.0-SNAPSHOT</version>
+	<version>${versionFromProfile}</version>
+
+	<profiles>
+		<profile>
+			<id>default</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<versionFromProfile>${project.parent.version}</versionFromProfile>
+			</properties>
+		</profile>
+		<profile>
+			<id>macos</id>
+			<properties>
+				<versionFromProfile>${project.parent.version}-macos</versionFromProfile>
+			</properties>
+		</profile>
+		<profile>
+			<id>allinone</id>
+			<properties>
+				<versionFromProfile>${project.parent.version}-allinone</versionFromProfile>
+			</properties>
+		</profile>
+	</profiles>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -22,7 +46,7 @@
 		<dependency>
 			<groupId>com._4paradigm.hybridse</groupId>
 			<artifactId>hybridse-proto</artifactId>
-			<version>${project.version}</version>
+			<version>${project.parent.version}</version>
 		</dependency>
 
 		<dependency>
