--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -50,7 +50,7 @@ jobs:
         run: |
           cd /depends && tar -zxf thirdparty.tar.gz
           mkdir zookeeper-3.4.14 && mv thirdsrc/* zookeeper-3.4.14/ && mv zookeeper-3.4.14 thirdsrc/
-      - name: build_fesql
+      - name: build_hybridse
         run: bash tools/install_hybridse.sh
       - name: build_fedb
         run: |
