--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,12 +44,12 @@ set(HYBRIDSE_VERSION_BUG 0)
 
 option(TESTING_ENABLE "Enable Test" ON)
 option(CORE_TESTING_ENABLE "Enable Core Test" ON)
-option(EXAMPLES_TESTING_ENABLE "Enable Examples Test" ON)
-option(BENCHMARK_ENABLE "Enable Benchmark" ON)
-option(COVERAGE_ENABLE "Enable Coverage" ON)
+option(EXAMPLES_TESTING_ENABLE "Enable Examples Test" OFF)
+option(BENCHMARK_ENABLE "Enable Benchmark" OFF)
+option(COVERAGE_ENABLE "Enable Coverage" OFF)
 option(PYSDK_ENABLE "Enable pysdk" ON)
 option(JAVASDK_ENABLE "Enable javasdk" ON)
-option(EXAMPLES_ENABLE "Enable examples" ON)
+option(EXAMPLES_ENABLE "Enable examples" OFF)
 option(LLVM_EXT_ENABLE "Enable llvm ext sources" OFF)
 
 if (CMAKE_BUILD_TYPE STREQUAL "")
