--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -8,6 +8,9 @@ jobs:
     runs-on: self-hosted
     steps:
     - uses: actions/checkout@v1
+    - uses: actions/setup-node@v2
+      with:
+        node-version: '14'
     - name: Install Dependencies
       run: npm install @commitlint/config-conventional
     - uses: JulienKode/pull-request-name-linter-action@v0.2.0
